Fix project table width in workgroup on Safari (and iOS) #286

--- a/app/assets/stylesheets/views/circle/working_groups/_show.scss
+++ b/app/assets/stylesheets/views/circle/working_groups/_show.scss
@@ -43,7 +43,7 @@ body.internal .working-group {
         margin-top: 20px;
 
         .default-table {
-          min-width: auto;
+          min-width: 0;
           th, td {
             font-weight: normal;
             font-size: 1.5rem;
